...
        label.numberOfLines = 1
        return label
    }()
    
    let tempSarcasticLabel: UILabel = {
        let label = UILabel()
        label.add(text: "Ready to lose more $ ?", font: UIFont(regularWithSize: 20), textColor: UIColor(hex: "686B75"))
        label.textAlignment = .center
        return label
    }()
    
    func setUpViews() {
        
...
