...
    // ----------------------------------- //
    // MARK: Elements
    // ----------------------------------- //
    
    let watchListLabel: UILabel = {
        let label = UILabel()
        label.add(text: "Portfolio", font: UIFont(boldWithSize: 17), textColor: .white)
        label.textAlignment = .center
        return label
    }()
        
    lazy var addButton: UIButton = {
        let button = UIButton()
...
