...
        //sectorCategoryLabel.text = selectedSector
        sectorCategoryLabel.text = selectedSector
        navigationItem.titleView = sectorCategoryLabel
        
        searchBar.delegate = self
        
        getCollection(type: "sector", collectionName: selectedSector, completion: {
            response in
            DispatchQueue.main.async {
                self.sectorStocks = response
                print("RESP", response)
                self.filtered = self.sectorStocks
                self.collectionView.reloadData()
...
    }
    
    let sectorCategoryLabel: UILabel = {
        let label = UILabel()
        label.add(text: "TECH FOR NOW", font: UIFont(name: "Verdana-BoldItalic", size: 20)!, textColor: .black)
        label.textAlignment = .center
        label.accessibilityIdentifier = "scl"
        return label
        
    }()
    
    var searchBar: UISearchBar = {
        let sb = UISearchBar()
        sb.searchBarStyle = UISearchBar.Style.prominent
        sb.placeholder = "Search..."
        sb.sizeToFit()
        sb.isTranslucent = false
        sb.backgroundColor = .black
        
...
        super.init(frame: frame)
        
        backgroundColor = .systemGray5
        
        setUpViews()
        
        self.accessibilityIdentifier = "categoryCell"
    }
    
    //elements seen by unexpanded cell
    
    let nameLabel: UILabel = {
        let label = UILabel()
        label.add(text: "APPL", font: UIFont(name: "PingFangHK-Regular", size: 15)!, textColor: .black)
        label.textAlignment = .center
        
        label.accessibilityIdentifier = "name"
        
        return label
    }()
    
    let dashLabel: UILabel = {
        let label = UILabel()
...
    
    let currentPriceLabel: UILabel = {
        let label = UILabel()
        label.add(text: "$120.62", font: UIFont(name: "PingFangHK-Regular", size: 15)!, textColor: .black)
        label.textAlignment = .center
        
        label.accessibilityIdentifier = "curr"
        
        return label
    }()
    
    let percentChangeLabel: UILabel = {
        let label = UILabel()
        label.add(text: "-1.14%", font: UIFont(name: "PingFangHK-Regular", size: 11)!, textColor: .black)
        label.textAlignment = .center
        
        label.accessibilityIdentifier = "perc"
        
        return label
    }()
    
    let priceChangeLabel: UILabel = {
        let label = UILabel()
        label.add(text: "-$1,025.60", font: UIFont(name: "PingFangHK-Regular", size: 11)!, textColor: .black)
        label.textAlignment = .center
        
        label.accessibilityIdentifier = "price"
        
        return label
    }()
    
    
    func setUpViews() {
...
