...
        return label
        
    }()
    
    let mostPopularLabel: UILabel = {
        let label = UILabel()
        label.add(text: "Most popular", font: UIFont(name: "PingFangHK-Medium", size: 15)!, textColor: .white)
        label.textAlignment = .center
        return label
    }()
    
    
    //most popular collection view
...
            if(stock.changePercent! > 0){
                cell.moveLabel.textColor = UIColor(hex: "7ABE60")
            } else {
                cell.moveLabel.textColor = UIColor(hex: "be6060")
            }

            cell.accessibilityIdentifier = "popular"
            
            return cell
        }
        
        let cell = collectionView.dequeueReusableCell(withReuseIdentifier: "mostPopularCell", for: indexPath) as! mostPopularCell
        return cell
...
