...
        sb.placeholder = "Search..."
        
        //change color of "Search..."
        var searchTextField: UITextField? = sb.value(forKey: "searchField") as? UITextField
           if searchTextField!.responds(to: #selector(getter: UITextField.attributedPlaceholder)) {
            let attributeDict = [NSAttributedString.Key.foregroundColor: UIColor.black]
               searchTextField!.attributedPlaceholder = NSAttributedString(string: "Search", attributes: attributeDict)
           }
        
        sb.sizeToFit()
        sb.isTranslucent = true
        
        searchTextField?.accessibilityIdentifier = "stf"
        
        return sb
    }()
    
    let tableView: UITableView = {
        let tb = UITableView()
...
